# VSCode-extension

./: .gitignore
DoxygenDocumentation/: Doxyfile
DoxygenDocumentation/html/: _custom_linked_list_8h_source.html  _node_8h_source.html  _v_s_pointer_8h_source.html  annotated.html  class_custom_linked_list-members.html  class_custom_linked_list.html  class_node-members.html  class_node.html  class_v_s_pointer-members.html  class_v_s_pointer.html  classes.html  classgarbage_collector-members.html  classgarbage_collector.html  classgarbage_element-members.html  classgarbage_element.html  client_8h_source.html  dir_24db0cfeb6c6c88fbcaa7de72eccb927.html  doxygen.css  files.html  (+8 more)
Dynamic_Library (Adrian copy)/: VSPointer.h  garbageCollector.cpp  garbageCollector.h  garbageElement.h  main.cpp
Dynamic_Library (Prueba VS)/: CMakeLists.txt  VSPointer.h  garbageCollector.h
Extension_Tests/: conexion.json  conexion_12-6-2020_1:23:15.json  conexion_12-6-2020_2:5:49.json  conexion_13-6-2020_0:55:49.json  main.cpp  pretty.json  sendServer.json
Extension_js_def/memory-management/copiar/: CMakeLists.txt  main.cpp
Extension_js_def/memory-management/copiar/lib/: CustomLinkedList.h  VSPointer.h  garbageElement.h  pointerParser.h
VSPtr_DynamicLibrary/: CMakeLists.txt  CustomLinkedList.h  Node.h  VSPointer.cpp  VSPointer.h  client.h  garbageCollector.cpp  garbageCollector.h  garbageElement.cpp  garbageElement.h  library.cpp  person.cpp  person.h  pointerParser.h
VSPtr_Server/: CMakeLists.txt  VSPointer.cpp  VSPointer.h  garbageCollector.cpp  garbageCollector.h  main.cpp
(+86 files in other folders)
